--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+
+ @import "./_reset";
+ @import "shared/head";
+ @import "top/top";
+ @import "shared/head-multi-tags";
