--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -104,3 +104,137 @@
                         連載記事
                         %i.megamenu-title-icon.icon-arrow-ciecle
                       %span.megamenu-mark
+            %li.header-navi-item.js-header-navi-item{ data: "service"}
+              %a.header-navi-text.header-navi-text-mobile{ href: "#" }
+                %span.header-navi-text-en SERVICE
+                %span.header-navi-text-jp 事業一覧
+                %span.header-navi-mark
+              .megamenu.js-megamenu
+                .megamenu-list.js-megamenu-list{ data: "service" }
+                  .megamenu-item.megamenu-item-mobile
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        事業一覧
+                        %i.megamenu-title-icon.icon-arrow-circle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        Web制作
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        オフショア開発
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        マーケティング支援
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        ゲストハウス
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        コアーキング
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        飲食
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        教育
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        地方創生
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        アート
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+            %li.header-navi-item.js-header-navi-item{ data: "recruit"}
+              %a.header-navi-text.header-navi-text-mobile{ href: "#" }
+                %span.header-navi-text-en RECRUIT
+                %span.header-navi-text-jp 採用情報
+                %span.header-navi-mark.header-navi-mark-arrow
+              .megamenu.js-megamenu
+                .megamenu-list.js-megamenu-list{ data: "service" }
+                  .megamenu-item.megamenu-item-mobile
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        事業一覧
+                        %i.megamenu-title-icon.icon-arrow-circle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        Web制作
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        オフショア開発
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        マーケティング支援
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        ゲストハウス
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        コアーキング
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        飲食
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        教育
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        地方創生
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
+                  .megamenu-item
+                    %a{ href: "#" }
+                      %p.megamenu-title
+                        アート
+                        %i.megamenu-title-icon.icon-arrow-ciecle
+                      %span.megamenu-mark
