--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -90,3 +90,26 @@ input {
   border-color: initial;
   border-image: initial;
 }
+audio, canvas, iframe, img, svg, video {
+  vertical-align: middle;
+}
+.l-wrapper:after {
+  content: '';
+  display: block;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(255,255,255,0);
+  -webkit-transition: background-color .5s ease;
+  transition: background-color .5s ease;
+}
+textarea {
+  resize: vertical;
+}
+pre,
+textarea {
+  overflow: auto;
+}
