--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
  */
 
  @import "./_reset";
- @import "shared/head";
+ @import "shared/header";
+ @import "shared/header-multi-tags";
+ @import "shared/footer.scss";
+ @import "shared/footer-multi-tags";
  @import "top/top";
- @import "shared/head-multi-tags";
