--- a/app/assets/stylesheets/shared/_footer-multi-tags.scss
+++ b/app/assets/stylesheets/shared/_footer-multi-tags.scss
@@ -89,3 +89,9 @@
   -webkit-transition: opacity .25s ease;
   transition: opacity .25s ease;
 }
+
+.l-content-faq,
+.l-content-full {
+  width: 100%;
+  margin: 0 auto;
+}
