--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -47,6 +47,16 @@ li {
 div {
   display: block;
 }
+// 記事の題名のmargin幅が崩れてしまうのでいったん保留
+// h2 {
+//   display: block;
+//   font-size: 1.5em;
+//   margin-block-start: 0.83em;
+//   margin-block-end: 0.83em;
+//   margin-inline-start: 0px;
+//   margin-inline-end: 0px;
+//   font-weight: bold;
+// }
 button {
   -webkit-writing-mode: horizontal-tb !important;
   text-rendering: auto;
@@ -112,4 +122,9 @@ textarea {
 pre,
 textarea {
   overflow: auto;
+}
+details,
+main,
+summary {
+  display: block;
 }
