--- a/app/assets/stylesheets/shared/_header.scss
+++ b/app/assets/stylesheets/shared/_header.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: block;
   width: 100%;
-  min-height: 1260px;
+  min-width: 1260px;
   height: 0px;
   .l-header-inner {
     display: block;
