記事投稿ページの実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,6 @@
  @import "shared/footer-multi-tags";
  @import "top/top";
  @import "top/top-multi-tags";
+ @import "post/post";
+ @import "post/post_tags.scss";
+ @import "post/post_multi-tags"
