--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -14,9 +14,9 @@
         %nav.header-navi.js-header-navi
           %ul.header-navi-list
             %li.header-navi-item.js-header-navi-item{ data: "blog"}
-              %a.header-navi-text.header-navi-text-mobile{ href: "#" }
+              %a.header-navi-text.header-navi-text-mobile{ href: "/post/new" }
                 %span.header-navi-text-en BLOG
-                %span.header-navi-text-jp ブログ
+                %span.header-navi-text-jp 投稿する
                 %span.header-navi-mark
               .megamenu.js-megamenu
                 .megamenu-list.js-megamenu-list{ data: "blog" }
@@ -105,9 +105,9 @@
                         %i.megamenu-title-icon.icon-arrow-ciecle
                       %span.megamenu-mark
             %li.header-navi-item.js-header-navi-item{ data: "service"}
-              %a.header-navi-text.header-navi-text-mobile{ href: "#" }
-                %span.header-navi-text-en SERVICE
-                %span.header-navi-text-jp 事業一覧
+              %a.header-navi-text.header-navi-text-mobile{ href: "/" }
+                %span.header-navi-text-en TOP
+                %span.header-navi-text-jp トップページ
                 %span.header-navi-mark
               .megamenu.js-megamenu
                 .megamenu-list.js-megamenu-list{ data: "service" }
