--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,4 +1,4 @@
-%script{ src: "/top.js/" }
+%script{ src: "index.js" }
 = render partial: 'shared/header'
 .l-wrapper.js-wrapper.js-exclusion-header.__web-inspector-hide-shortcut__
   .blogcategory.js-blogcategory.js-blogcategory-service
