--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -14,7 +14,7 @@
         %nav.header-navi.js-header-navi
           %ul.header-navi-list
             %li.header-navi-item.js-header-navi-item{ data: "blog"}
-              %a.header-navi-text.header-navi-text-mobile{ href: "/post/new" }
+              %a.header-navi-text.header-navi-text-mobile{ href: "/articles/new" }
                 %span.header-navi-text-en BLOG
                 %span.header-navi-text-jp 投稿する
                 %span.header-navi-mark
