--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,24 +1,23 @@
-= render partial: 'shared/header'
-%body
-  .container
-    .row
-      .col-md-8.col-md-offset-2
-        %h2 ブログ記事投稿・編集
-        %form(method="POST")
-          .form-date.form-group
-            .blog-name
-              %label.blog-label 日付
-            %input.input-time(name="post_date" size="20" value="" placeholder="日付を入力して下さい。" style="font-weight: bold;" )
-          .form-title.form-group
-            .blog-name
-              %label.blog-label タイトル
-            %input.input-title(name="title" value="" placeholder="タイトルを入力して下さい。" style="font-weight: bold;" )
-          .form-letter.form-group
-            .blog-name
-              %label.blog-label 本文
-            %textarea.input-control(rows="15" name="body" placeholder="本文を入力してください。" style="font-weight: bold;")
-          .form-input
-            %input.btn.btn-primary.btn-sm(type="submit" value="投稿する" )
+
+
+          -# .form-date.form-group
+          -#   .blog-name
+          -#     %label.blog-label 日付
+          -#   %input.input-time(name="post_date" size="20" value="" placeholder="日付を入力して下さい。" style="font-weight: bold;" )
+          -# .form-title.form-group
+          -#   .blog-name
+          -#     %label.blog-label タイトル
+          -#   %input.input-title(name="title" value="" placeholder="タイトルを入力して下さい。" style="font-weight: bold;" )
+          -# .form-letter.form-group
+          -#   .blog-name
+          -#     %label.blog-label 本文
+          -#   %textarea.input-control(rows="15" name="body" placeholder="本文を入力してください。" style="font-weight: bold;")
+          -# .form-input
+          -#   %input.btn.btn-primary.btn-sm(type="submit" value="投稿する" )
+
+
+
+
 -# %body.no-scroll.ng-scope(id="body" ng-Style="rootView.style" ng-controller= "MdrdManageRootViewCtrl as rootView")
 -#   .ng-score(ui-view= "root" )
 -#     .page.blog-post-editor.ng-scope
